# HTML_2_CPP_AND_OPENGL_PARSER

./: CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.md  _setAndRun.sh  compile.sh  contents.txt  input.html  install.ps1  install.sh  requirements.sh  visualizer.cpp
_/: generated_output.cpp  html_parser.cpp  test.html
src/: generated_output.cpp  html_parser.cpp
